--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>芝山圓夢媒合站</title>
+	<link rel="icon" href="img/favicon.png" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="header-component.js" defer></script>
 	<script src="footer-component.js" defer></script>
