my-proposals page

--- a/proposal-detail.html
+++ b/proposal-detail.html
@@ -33,7 +33,7 @@
             <div class="back-navigation">
                 <button class="back-btn" onclick="history.back()">
                     <img src="img/right-arrow.png" alt="返回" />
-                    返回提案總覽
+                    返回上一頁
                 </button>
             </div>
 
