--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
                         <!-- <span class="checkmark"></span>
                         記住我 -->
                     </label>
-                    <a href="#" class="forgot-password">忘記密碼？</a>
+                    <!-- <a href="#" class="forgot-password">忘記密碼？</a> -->
                 </div>
 
                 <button type="submit" class="login-btn" id="loginBtn">登入</button>
