--- a/register.html
+++ b/register.html
@@ -24,13 +24,10 @@
             </div>
 
             <form class="register-form" id="registerForm">
-                <!-- 暫時註解個人資料欄位 -->
-                <!-- 
                 <div class="form-group">
                     <label for="name">姓名 <span class="required">*</span></label>
                     <input type="text" id="name" name="name" placeholder="請輸入您的姓名" required />
                 </div>
-                -->
 
                 <div class="form-group">
                     <label for="email">電子郵件 <span class="required">*</span></label>
@@ -59,13 +56,10 @@
                     <div class="input-message" id="confirmPasswordMessage" style="height:18px; display:none;"></div>
                 </div>
 
-                <!-- 暫時註解手機號碼欄位 -->
-                <!--
                 <div class="form-group">
                     <label for="phone">手機號碼 <span class="optional">(選填)</span></label>
                     <input type="tel" id="phone" name="phone" placeholder="請輸入手機號碼" />
                 </div>
-                -->
 
                 <!-- 移除身份選擇和專用欄位 -->
                 <!-- 
@@ -129,13 +123,16 @@
                 </div>
                 -->
 
-                <!-- <div class="form-options">
-                    <label class="terms-agree">
-                        <input type="checkbox" id="terms" name="terms" required />
-                        <span class="checkmark"></span>
-                        我同意<a href="#" class="terms-link">服務條款</a>和<a href="#" class="privacy-link">隱私政策</a>
-                    </label>
-                </div> -->
+                <div class="form-options">
+                    <div class="terms-row">
+                        <label class="terms-agree">
+                            <input type="checkbox" id="terms" name="terms" required />
+                            <span class="checkmark"></span>
+                            我同意<a href="terms-of-service.html" class="terms-link">服務條款</a>和<a href="privacy-policy.html" class="privacy-link">隱私政策</a>
+                        </label>
+                        <div class="input-message" id="termsMessage" style="height:18px; display:none;"></div>
+                    </div>
+                </div>
 
                 <button type="submit" class="register-btn" id="registerBtn">註冊</button>
 
@@ -304,6 +301,29 @@
         document.getElementById('confirmPassword').addEventListener('input', validatePassword);
         document.getElementById('password').addEventListener('input', validatePassword);
 
+        // 服務條款驗證
+        function validateTerms() {
+            const termsCheckbox = document.getElementById('terms');
+            const termsMessage = document.getElementById('termsMessage');
+            const checkmark = document.querySelector('.terms-agree .checkmark');
+            
+            if (!termsCheckbox.checked) {
+                termsMessage.textContent = '請先閱讀並同意服務條款和隱私政策';
+                termsMessage.style.color = '#e74c3c';
+                termsMessage.style.display = 'block';
+                checkmark.classList.add('error');
+                return false;
+            } else {
+                termsMessage.textContent = '';
+                termsMessage.style.display = 'none';
+                checkmark.classList.remove('error');
+                return true;
+            }
+        }
+
+        // 為服務條款勾選框添加事件監聽器
+        document.getElementById('terms').addEventListener('change', validateTerms);
+
         // 表單提交處理
         document.getElementById('registerForm').addEventListener('submit', async function(e) {
             e.preventDefault();
@@ -312,6 +332,13 @@
             const originalText = registerBtn.textContent;
 
             try {
+                // 檢查服務條款是否已勾選
+                if (!validateTerms()) {
+                    // 聚焦到服務條款勾選框
+                    document.getElementById('terms').focus();
+                    return;
+                }
+
                 // 驗證密碼
                 if (!validatePassword()) {
                     alert('密碼確認不相符，請檢查後重新輸入');
@@ -344,6 +371,8 @@
                     passwordSalt: hashedPassword.salt,
                     phone: formData.get('phone').trim(),
                     userType: 'general', // 設為通用使用者
+                    termsAccepted: true, // 記錄已同意服務條款
+                    termsAcceptedDate: new Date().toISOString(),
                     createdAt: serverTimestamp(),
                     updatedAt: serverTimestamp(),
                     lastLoginAt: null,
